Fix Readme, id tags, and class tags

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         <div class="col-md-3">
           <div class="panel panel-info">
             <div class="panel-heading">
-              <p class="project" class="panel-title">Portfolio-Landing-Page</p>
+              <p class="panel-title">Portfolio-Landing-Page</p>
             </div>
             <div class="panel-body">
-              <img class="img-responsive" src="img/helipad.jpeg" class="img-rounded" id="Panel_Image">
+              <img class="img-responsive Panel_Image img-rounded" src="img/helipad.jpeg">
               <p class="link"><a href="https://micaeladj.github.io/Portfolio-Landing-Page/">click here to view</a></p>
               <p class="brief-description">A portfolio landing page using HTML and CSS</p>
               <p class="language">HTML + CSS</p>
@@ -39,10 +39,10 @@
         <div class="col-md-3">
           <div class="panel panel-info">
             <div class="panel-heading">
-              <p class="project" class="panel-title">wiki-page</p>
+              <p class="panel-title">wiki-page</p>
             </div>
             <div class="panel-body">
-              <img class="img-responsive" src="img/wiki.png" class="img-rounded" id="Panel_Image">
+              <img class="img-responsive Panel_Image img-rounded" src="img/wiki.png">
               <p class="link"><a href="https://github.com/MicaelaDJ/wiki-page">click here to view</a></p>
               <p class="brief-description">Recreate wiki home page</p>
               <p class="language">HTML + CSS</p>
@@ -53,10 +53,10 @@
         <div class="col-md-3">
           <div class="panel panel-info">
             <div class="panel-heading">
-              <p class="project" class="panel-title">vacation</p>
+              <p class="panel-title">vacation</p>
             </div>
             <div class="panel-body">
-              <img class="img-responsive" src="img/kangaroo.jpeg" class="img-rounded" id="Panel_Image">
+              <img class="img-responsive Panel_Image img-rounded" src="img/kangaroo.jpeg">
               <p class="link"><a href="https://github.com/MicaelaDJ/vacation">click here to view</a></p>
               <p class="brief-description">A page using bootstrap depicting a vacation spot</p>
               <p class="language">HTML + CSS</p>
@@ -67,10 +67,10 @@
         <div class="col-md-3">
           <div class="panel panel-info">
             <div class="panel-heading">
-              <p class="project" class="panel-title">week-in-review</p>
+              <p class="panel-title">week-in-review</p>
             </div>
             <div class="panel-body">
-              <img class="img-responsive" src="img/calendar.jpeg" class="img-rounded" id="Panel_Image">
+              <img class="img-responsive Panel_Image img-rounded" src="img/calendar.jpeg">
               <p class="link"><a href="https://github.com/MicaelaDJ/week-in-review">click here to view</a></p>
               <p class="brief-description">A simple webpage about what we learned this week</p>
               <p class="language">HTML + CSS</p>
@@ -81,10 +81,10 @@
         <div class="col-md-3">
           <div class="panel panel-info">
             <div class="panel-heading">
-              <p class="project" class="panel-title">favorite-band</p>
+              <p class="panel-title">favorite-band</p>
             </div>
             <div class="panel-body">
-              <img class="img-responsive" src="img/musicnote.jpeg" class="img-rounded" id="Panel_Image">
+              <img class="img-responsive Panel_Image img-rounded" src="img/musicnote.jpeg">
               <p class="link"><a href="https://github.com/MicaelaDJ/favorite-band">click here to view</a></p>
               <p class="brief-description">A simple webpage about a musical group</p>
               <p class="language">HTML + CSS</p>
@@ -95,10 +95,10 @@
         <div class="col-md-3">
           <div class="panel panel-info">
             <div class="panel-heading">
-              <p class="project" class="panel-title">blog</p>
+              <p class="panel-title">blog</p>
             </div>
             <div class="panel-body">
-              <img class="img-responsive" src="img/blog.png" class="img-rounded" id="Panel_Image">
+              <img class="img-responsive Panel_Image img-rounded" src="img/blog.png">
               <p class="link"><a href="https://github.com/MicaelaDJ/blog">click here to view</a></p>
               <p class="brief-description">Practice divs on a blog site</p>
               <p class="language">HTML + CSS</p>
@@ -109,10 +109,10 @@
         <div class="col-md-3">
           <div class="panel panel-info">
             <div class="panel-heading">
-              <p class="project" class="panel-title">boring-lecture</p>
+              <p class="panel-title">boring-lecture</p>
             </div>
             <div class="panel-body">
-              <img class="img-responsive" src="img/book.png" class="img-rounded" id="Panel_Image">
+              <img class="img-responsive Panel_Image img-rounded" src="img/book.png">
               <p class="link"><a href="https://github.com/MicaelaDJ/boring-lecture">click here to view</a></p>
               <p class="brief-description">Practicing styling classes in css</p>
               <p class="language">HTML + CSS</p>
@@ -123,10 +123,10 @@
         <div class="col-md-3">
           <div class="panel panel-info">
             <div class="panel-heading">
-              <p class="project" class="panel-title">cupcakes</p>
+              <p class="panel-title">cupcakes</p>
             </div>
             <div class="panel-body">
-              <img class="img-responsive" src="img/cupcake.png" class="img-rounded" id="Panel_Image">
+              <img class="img-responsive Panel_Image img-rounded" src="img/cupcake.png">
               <p class="link"><a href="https://micaeladj.github.io/cupcakes/">click here to view</a></p>
               <p class="brief-description">A simple webpage about cupcakes</p>
               <p class="language">HTML + CSS</p>
@@ -137,10 +137,10 @@
         <div class="col-md-3">
           <div class="panel panel-info">
             <div class="panel-heading">
-              <p class="project" class="panel-title">css-class-practice</p>
+              <p class="panel-title">css-class-practice</p>
             </div>
             <div class="panel-body">
-              <img class="img-responsive" src="img/css.jpeg" class="img-rounded" id="Panel_Image">
+              <img class="img-responsive Panel_Image img-rounded" src="img/css.jpeg">
               <p class="link"><a href="https://github.com/MicaelaDJ/css-class-practice">click here to view</a></p>
               <p class="brief-description">Practicing creating classes in css</p>
               <p class="language">HTML + CSS</p>
@@ -151,10 +151,10 @@
         <div class="col-md-3">
           <div class="panel panel-info">
             <div class="panel-heading">
-              <p class="project" class="panel-title">Resort_Website</p>
+              <p class="panel-title">Resort_Website</p>
             </div>
             <div class="panel-body">
-              <img class="img-responsive" src="img/mermaid.jpeg" class="img-rounded" id="Panel_Image">
+              <img class="img-responsive Panel_Image img-rounded" src="img/mermaid.jpeg">
               <p class="link"><a href="https://github.com/MicaelaDJ/Resort_Website">click here to view</a></p>
               <p class="brief-description">A simple webpage about a resort with  various pages</p>
               <p class="language">HTML + CSS</p>
@@ -165,10 +165,10 @@
         <div class="col-md-3">
           <div class="panel panel-info">
             <div class="panel-heading">
-              <p class="project" class="panel-title">favorite-places</p>
+              <p class="panel-title">favorite-places</p>
             </div>
             <div class="panel-body">
-              <img class="img-responsive" src="img/hogwarts.jpeg" class="img-rounded" id="Panel_Image">
+              <img class="img-responsive Panel_Image img-rounded" src="img/hogwarts.jpeg">
               <p class="link"><a href="https://github.com/MicaelaDJ/favorite-places">click here to view</a></p>
               <p class="brief-description">A simple webpage depicting various places</p>
               <p class="language">HTML + CSS</p>
@@ -179,10 +179,10 @@
         <div class="col-md-3">
           <div class="panel panel-info">
             <div class="panel-heading">
-              <p class="project" class="panel-title">Cosmo-The-Angry-Fish-Blog</p>
+              <p class="panel-title">Cosmo-The-Angry-Fish-Blog</p>
             </div>
             <div class="panel-body">
-              <img class="img-responsive" src="img/fish.png" class="img-rounded" id="Panel_Image">
+              <img class="img-responsive Panel_Image img-rounded" src="img/fish.png">
               <p class="link"><a href="https://github.com/MicaelaDJ/Cosmo-The-Angry-Fish-Blog">click here to view</a></p>
               <p class="brief-description">Simple web page about my beta fish Cosmo</p>
               <p class="language">HTML + CSS</p>
@@ -193,10 +193,10 @@
         <div class="col-md-3">
           <div class="panel panel-info">
             <div class="panel-heading">
-              <p class="project" class="panel-title">my-first-webpage</p>
+              <p class="panel-title">my-first-webpage</p>
             </div>
             <div class="panel-body">
-              <img class="img-responsive" src="img/rocket.png" class="img-rounded" id="Panel_Image">
+              <img class="img-responsive Panel_Image img-rounded" src="img/rocket.png">
               <p class="link"><a href="https://github.com/MicaelaDJ/my-first-webpage">click here to view</a></p>
               <p class="brief-description">My very first simple web page</p>
               <p class="language">HTML + CSS</p>
@@ -207,10 +207,10 @@
         <div class="col-md-3">
           <div class="panel panel-info">
             <div class="panel-heading">
-              <p class="project" class="panel-title">cookie-recipe</p>
+              <p class="panel-title">cookie-recipe</p>
             </div>
             <div class="panel-body">
-              <img class="img-responsive" src="img/cookie.png" class="img-rounded" id="Panel_Image">
+              <img class="img-responsive Panel_Image img-rounded" src="img/cookie.png">
               <p class="link"><a href="https://github.com/MicaelaDJ/cookie-recipe">click here to view</a></p>
               <p class="brief-description">Simple web page of a cookie recipe</p>
               <p class="language">HTML + CSS</p>
@@ -221,10 +221,10 @@
         <div class="col-md-3">
           <div class="panel panel-info">
             <div class="panel-heading">
-              <p class="project" class="panel-title">goodbye-world</p>
+              <p class="panel-title">goodbye-world</p>
             </div>
             <div class="panel-body">
-              <img class="img-responsive" src="img/goodbye.png" class="img-rounded" id="Panel_Image">
+              <img class="img-responsive Panel_Image img-rounded" src="img/goodbye.png">
               <p class="link"><a href="https://github.com/MicaelaDJ/goodbye-world">click here to view</a></p>
               <p class="brief-description">Simple web page that says goodbye in various languages</p>
               <p class="language">HTML + CSS</p>
@@ -235,10 +235,10 @@
         <div class="col-md-3">
           <div class="panel panel-info">
             <div class="panel-heading">
-              <p class="project" class="panel-title">hello-world</p>
+              <p class="panel-title">hello-world</p>
             </div>
             <div class="panel-body">
-              <img class="img-responsive" src="img/hello.jpeg" class="img-rounded" id="Panel_Image">
+              <img class="img-responsive Panel_Image img-rounded" src="img/hello.jpeg">
               <p class="link"><a href="https://github.com/MicaelaDJ/hello-world">click here to view</a></p>
               <p class="brief-description">Simple web page that says hello in various languages</p>
               <p class="language">HTML + CSS</p>
@@ -400,6 +400,11 @@
           </div>
         </div>
       </div>
+    </div>
+    <div class="container">
+      <footer>
+        <p>Contact information: <a href="mailto:micaelajawor@yahoo.com">micaelajawor@yahoo.com</a>.</p>
+      </footer>
     </div>
 
 
